WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275083
[Site Isolation] Begin to fix back forward navigations going to cross-origin iframes
https://bugs.webkit.org/show_bug.cgi?id=275083
Summary
[Site Isolation] Begin to fix back forward navigations going to cross-origin ...
Charlie Wolfe
Reported
2024-06-03 16:50:12 PDT
If we are navigating to a back forward item that corresponds to an out-of-process iframe, and the process that was hosting the frame no longer exists, we should navigate the process that is now hosting the frame.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-03 16:50:30 PDT
<
rdar://problem/129192542
>
Charlie Wolfe
Comment 2
2024-06-03 16:52:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29480
EWS
Comment 3
2024-06-04 00:27:16 PDT
Committed
279690@main
(c5709a29db79): <
https://commits.webkit.org/279690@main
> Reviewed commits have been landed. Closing PR #29480 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug