Source/WebKit/Shared/SessionState.h
@@ -77,6 +77,8 @@ public:
     void setDocumentState(const Vector<AtomString>&, ShouldValidate = ShouldValidate::No);
     static bool validateDocumentState(const Vector<AtomString>&);
 
+    const FrameState* stateForFrameID(WebCore::FrameIdentifier) const;
+
     String urlString;
     String originalURLString;
     String referrer;
