Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -2257,17 +2257,30 @@ RefPtr<API::Navigation> WebPageProxy::goToBackForwardItem(WebBackForwardListItem
     }
 
     Ref process = m_process;
+    Ref navigation = m_navigationState->createBackForwardNavigation(process->coreProcessIdentifier(), item, m_backForwardList->protectedCurrentItem(), frameLoadType);
+    auto transaction = internals().pageLoadState.transaction();
+    internals().pageLoadState.setPendingAPIRequest(transaction, { navigation->navigationID(), item.url() });
 
     // The item url should only be null for remote iframe navigations.
     if (item.url().isNull()) {
         ASSERT(m_preferences->siteIsolationEnabled());
         if (RefPtr processForIdentifier = WebProcessProxy::processForIdentifier(item.lastProcessIdentifier()))
             process = *processForIdentifier;
+        else if (auto* targetFrameState = item.pageState().mainFrameState.stateForFrameID(item.frameID())) {
+            if (&item != m_backForwardList->currentItem())
+                protectedBackForwardList()->goToItem(item);
+            if (RefPtr frame = WebFrameProxy::webFrame(item.frameID())) {
+                LoadParameters loadParameters;
+                loadParameters.request = ResourceRequest { targetFrameState->urlString };
+                loadParameters.frameIdentifier = item.frameID();
+                loadParameters.navigationID = navigation->navigationID();
+                loadParameters.lockBackForwardList = LockBackForwardList::Yes;
+                frame->setHasPendingBackForwardItem(true);
+                frame->protectedProcess()->send(Messages::WebPage::LoadRequest(WTFMove(loadParameters)), webPageID());
+                return RefPtr<API::Navigation> { WTFMove(navigation) };
+            }
+        }
     }
-
-    Ref navigation = m_navigationState->createBackForwardNavigation(process->coreProcessIdentifier(), item, m_backForwardList->protectedCurrentItem(), frameLoadType);
-    auto transaction = internals().pageLoadState.transaction();
-    internals().pageLoadState.setPendingAPIRequest(transaction, { navigation->navigationID(), item.url() });
 
     process->markProcessAsRecentlyUsed();
 
@@ -4674,6 +4687,7 @@ void WebPageProxy::continueNavigationInNewProcess(API::Navigation& navigation, W
         loadParameters.frameIdentifier = frame.frameID();
         loadParameters.isRequestFromClientOrUserInput = navigation.isRequestFromClientOrUserInput();
         loadParameters.navigationID = navigation.navigationID();
+        loadParameters.lockBackForwardList = frame.hasPendingBackForwardItem() ? LockBackForwardList::Yes : LockBackForwardList::No;
 
         Ref processNavigatingFrom = frame.isMainFrame() && m_provisionalPage ? m_provisionalPage->process() : frame.process();
         frame.setHasPendingBackForwardItem(frame.parentFrame() && frame.parentFrame()->process() == processNavigatingFrom);
@@ -8576,6 +8590,7 @@ void WebPageProxy::backForwardAddItemShared(Ref<WebProcessProxy>&& process, Fram
 
     Ref item = WebBackForwardListItem::create(WTFMove(itemState), identifier());
     item->setResourceDirectoryURL(currentResourceDirectoryURL());
+    item->setFrameID(targetFrameID);
     if (loadedWebArchive == LoadedWebArchive::Yes)
         item->setDataStoreForWebArchive(process->websiteDataStore());
     if (auto* targetFrame = WebFrameProxy::webFrame(targetFrameID)) {
